# RUCengine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RUCengine/: CMakeLists.txt
RUCengine/src/: Base.h
RUCengine/src/Core/: Application.cpp  Application.h  EntryPoint.h  ImGuiImpl.cpp  ImGuiImpl.h  Input.h  KeyCodes.h  MouseButtonCodes.h  Timestep.cpp  Timestep.h  Window.h
RUCengine/src/Core/Events/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
RUCengine/src/Core/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
RUCengine/src/Log/: Log.cpp  Log.h
RUCengine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRenderDevice.cpp  OpenGLRenderDevice.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
RUCengine/src/Platform/Windows/: WindowsConsoleLogger.cpp  WindowsConsoleLogger.h  WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
RUCengine/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.h  VertexArray.cpp  VertexArray.h
RUCengine/src/ResourceManager/: ResPtr.cpp  ResPtr.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: DefaultShader.glsl  FrameBufferShader.glsl  Test.glsl  TextureShader.glsl
Sandbox/src/: ImguiLayer.cpp  ImguiLayer.h  SandboxApp.cpp  TestLayer.cpp  TestLayer.h
